tests/miniJava/pos/001261_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new int [ 0 ] ) java [ 0 ] = 0 ; } }
