tests/miniJava/neg/005412_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int [] java { ; }
